--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><style type="text/css" id="qay2016"></style><head><meta http-equiv="Content-Type" content="text/html; charset=GB2312">
+<html><style type="text/css" id="qay2016"></style><head><meta http-equiv="Content-Type" content="text/html; charset=GB2312">
     <meta charset="GB2312">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
