--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html><style type="text/css" id="qay2016"></style><head><meta http-equiv="Content-Type" content="text/html; charset=GB2312">
-    <meta charset="GB2312">
+<html lang="en"><style type="text/css" id="qay2016"></style><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="homepage">
@@ -56,7 +56,7 @@
           </div>
 
           <div class="col-md-9" style="left:40px">
-			<h2><b>Qingan Yan (严庆安)</b></h2>
+			<h2><b>Qingan Yan (<span style="font-family:'Courier New'">['tsing-&aelig;n j&aelig;n]</span>)</b></h2>
 			<p>I am a PhD candidate at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University.</p>
 			<p>My research interests lie in the field of computer vision and graphics. In particular, I tackle the challenges in image-based 3D modeling, dense correspondence, scene and shape analysis.</p>
 			<p>Additionally, I am now looking for Postdoc positions on computer vision and graphics.</p>
