--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       	<div class="row">
 
 		  <div class="col-md-3" style="overflow:hidden; top:25px">
-			<img src="./figures/qay.png" style="width:280px; display:inline-block; align:right; overflow:hidden; scolling: no">
+			<img src="./figures/qay.jpg" style="width:280px; display:inline-block; align:right; overflow:hidden; scolling: no">
           </div>
 
           <div class="col-md-9" style="left:40px">
