--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
 
           <div class="col-md-9" style="left:40px">
-			<h2><b>Qingan Yan (<span style="font-family:'Courier New'">['tsing-&aelig;n j&aelig;n]</span>)</b></h2>
+			<h2><b>Qingan Yan <span style="font-family:'Courier New'">['tsing-&aelig;n j&aelig;n]</span></b></h2>
 			<p>I am a PhD candidate at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University.</p>
 			<p>My research interests lie in the field of computer vision and graphics. In particular, I tackle the challenges in image-based 3D modeling, dense correspondence, scene and shape analysis.</p>
 			<p>Additionally, I am now looking for Postdoc positions on computer vision and graphics.</p>
