--- a/index.html
+++ b/index.html
@@ -164,12 +164,20 @@ Recently, I focus on correspondence problems because I am interested in how to d
 </table>
 
 <h2>Patents</h2>
+<table class="imgtable"><tbody>
+<tr>
+<td align="left">
 <ul>
 	<li><p><b>Optical Multi-touch Point Detection Method Based on Visual Attention Model (in Chinese)</b><br>
 	Yadong Wu, <b>Qingan Yan</b> and Zhiqin Liu (<i>CN102855025B, granted, Jun.17.2015</i>)</p>
 </li>
 
 </ul>
+</td>
+</tr>
+</tbody>
+</table>
+
 <div id="footer">
 <div id="footer-text">
 Updated 2016-12-16 by Qingan Yan.
