--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Additionally, I am now looking for Postdoc positions on computer vision and grap
 <p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D modeling, structure from motion, scene and shape analysis. 
 </p>
 <p>
-Recently, I focus on correspondence problems because I am interested in how to densely represent (rigid or non-rigid) 3D shapes and accurately reconstruct vegetation. Moreover, I also explore the application of deep learning in 3D vision and graphics. </p>
+Recently, I focus on correspondence problems (both features and pixels) because I am interested in how to densely and accurately represent and reconstruct challenging 3D scenes, such as thin objects, texture-less shapes and the vegetation. Meanwhile, I am also interested in the application of deep learning in semantic shape analysis and scene recovery. </p>
 </td></tr></tbody></table>
 <h2>Papers</h2>
 <h3 style="color:#527bbd">2016</h3>
@@ -151,11 +151,11 @@ Recently, I focus on correspondence problems because I am interested in how to d
 </td>
 <td align="left">
 <ul>
-	<li><p><b>Geometrically Based Linear Iterative Clustering for Quantitative Feature Correspondence</b><br></p>
+<li><p><b>Vision Based Multi-touch System Used in Visualization</b><br></p>
 <p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br><i>Proceedings of Pacific Visualization 2011, poster</i></p>
 <p>
-				<a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> Video</a>&nbsp;
-  			  </p>
+<a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> Video</a>&nbsp;
+</p>
 </li>
 </ul>
 </td>
