--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="Qingan Yan" content="Homepage">
 
-<link rel="stylesheet" href="./addons/yan_style.css" type="text/css">
+<link rel="stylesheet" href="./addons/jemdoc.css" type="text/css">
 <title>Qingan Yan's Homepage</title>
 <style id="qay2016">
 .en-markup-crop-options {
@@ -63,7 +63,7 @@ Additionally, I am now looking for Postdoc positions on computer vision and grap
 
 <p>
 <b>Email:</b> yanqingan at whu.edu.cn<br>
-<b>Homepage:</b> <a href="https://yanqingan.github.io/" target="_blank">this page</a> |
+<b>Homepage:</b> <a href="https://yanqingan.github.io/" target="_blank">This page</a> |
 <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN in Chinese</a><br>
 <b>Mail:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
 </p>
@@ -78,7 +78,7 @@ Additionally, I am now looking for Postdoc positions on computer vision and grap
 <p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D modeling, structure from motion, scene and shape analysis. 
 </p>
 <p>
-Recently, I focus on correspondence problems (both features and pixels) because I am interested in how to densely and accurately represent and reconstruct challenging 3D scenes, such as thin objects, texture-less shapes and the vegetation. Meanwhile, I am also interested in the application of deep learning in semantic shape analysis and scene recovery. </p>
+These days, I have been attracted by the problem of correspondence (on both features and pixels) because I am interested in how to densely and accurately represent and reconstruct challenging 3D scenes, such as thin objects, texture-less shapes and the vegetation. Meanwhile, I am also interested in the application of deep learning in semantic shape analysis and scene recovery. </p>
 </td></tr></tbody></table>
 <h2>Papers</h2>
 <h3 style="color:#527bbd">2016</h3>
