--- a/index.html
+++ b/index.html
@@ -54,17 +54,21 @@
 </div>
 <table class="imgtable"><tbody>
 <tr>
-	<td><img src="./figures/qay.jpg" alt="Qingan Yan" width="75%">&nbsp;</td>
-<td align="left">
-<p>I am a fifth year PhD student at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University.</p>
+<td width="35%"><img src="./figures/qay.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
+<td align="left" style="padding-left:30px">
+<p>I am a fifth year PHD student at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University.</p>
+<p>Prior to WHU, I received my M.S. and B.E. degree in computer science respectively from SWUST in 2012 and HUN in 2008.</p>
 <p>
-Additionally, I am now looking for Postdoc positions on computer vision and graphics.
+<b>Available for hire:</b><br>
+I am now looking for Postdoc positions on computer vision and graphics.
 </p>
 
 <p>
 <b>Email:</b> yanqingan at whu.edu.cn<br>
-<b>Homepage:</b> <a href="https://yanqingan.github.io/" target="_blank">This page</a> |
-<a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN in Chinese</a><br>
+<b>Websites:</b> <a href="https://github.com/yanqingan" target="_blank">Github</a> |
+<a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
+<a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
+<br>
 <b>Mail:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
 </p>
 <p class="simple15">
@@ -180,7 +184,7 @@ These days, I have been attracted by the problem of correspondence (on both feat
 
 <div id="footer">
 <div id="footer-text">
-Updated 2016-12-16 by Qingan Yan.
+Last updated Dec-21-2016 by Qingan Yan.
 </div>
 </div>
 </div>
