--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <tr>
 <td width="35%"><img src="./figures/qay.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
 <td align="left" style="padding-left:30px">
-<p>I am a fifth year PHD student at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University.</p>
+<p>I am a fifth year Ph.D. student at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University.</p>
 <p>Prior to WHU, I received my M.S. and B.E. degree in computer science respectively from SWUST in 2012 and HUN in 2008.</p>
 <p>
 <b>Available for hire:</b><br>
