--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <table class="imgtable"><tbody>
 <tr>
 <td width="35%"><img src="./figures/qay.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
-<td align="left" style="padding-left:30px">
-<p>I am a fifth year Ph.D. student at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University.</p>
+<td align="left" style="padding-left:35px">
+<p>I am a fifth year Ph.D. student at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University, China.</p>
 <p>Prior to WHU, I received my M.S. and B.E. degree in computer science respectively from SWUST in 2012 and HUN in 2008.</p>
 <p>
 <b>Available for hire:</b><br>
@@ -65,7 +65,7 @@ I am now looking for Postdoc positions on computer vision and graphics.
 
 <p>
 <b>Email:</b> yanqingan at whu.edu.cn<br>
-<b>Websites:</b> <a href="https://github.com/yanqingan" target="_blank">Github</a> |
+<b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
 <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
 <br>
@@ -79,12 +79,35 @@ I am now looking for Postdoc positions on computer vision and graphics.
 <h2>Research Interest</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D modeling, structure from motion, scene and shape analysis. 
-</p>
+<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D modeling, structure from motion, scene and shape analysis.</p>
 <p>
-These days, I have been attracted by the problem of correspondence (on both features and pixels) because I am interested in how to densely and accurately represent and reconstruct challenging 3D scenes, such as thin objects, texture-less shapes and the vegetation. Meanwhile, I am also interested in the application of deep learning in semantic shape analysis and scene recovery. </p>
+These days, I am interested in the problem of correspondence (on both images and geometries), since I think it is a vital element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
+<p>Meanwhile, I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
+</p>
 </td></tr></tbody></table>
+
 <h2>Papers</h2>
+
+<h3 style="color:#527bbd">2017</h3>
+<table class="imgtable"><tbody>
+<tr>
+<td style="border:#cccccc 1.5px solid" width="23%">
+	<img src="./figures/tvcg17_surface.jpg" width="100%<article>">&nbsp;
+</td>
+<td align="left">
+<ul>
+	<li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a><br></p>
+<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br><i>IEEE Transactions on Visualization and Computer Graphics (to appear in 2017)</i></p>
+<p>
+
+</p>
+</li>
+</ul>
+</td>
+</tr>
+</tbody>
+</table>
+
 <h3 style="color:#527bbd">2016</h3>
 <table class="imgtable"><tbody>
 <tr>
