--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ I am now looking for Postdoc positions on computer vision and graphics.
 <h2>Research Interest</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D modeling, structure from motion, scene and shape analysis.</p>
+<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, scene and shape analysis.</p>
 <p>
-These days, I am interested in the problem of correspondence (on both images and geometries), since I think it is a vital element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
+These days, I am interested in the problem of matching (on both images and geometries), since I think it is a vital element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
 <p>Meanwhile, I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
 </p>
 </td></tr></tbody></table>
