--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
 <tr>
 <td width="35%"><img src="./figures/qay.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
 <td align="left" style="padding-left:35px">
-<p>I am a fifth year Ph.D. student at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University, China.</p>
-<p>Prior to WHU, I received my M.S. and B.E. degree in computer science respectively from SWUST in 2012 and HUN in 2008.</p>
+<b>About me:</b><br>
+<p>I am a Ph.D. candidate at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University, China. Prior to WHU, I received my M.S. and B.E. degree in computer science respectively from SWUST in 2012 and HUN in 2008.</p>
 <p>
 <b>Available for hire:</b><br>
-I am now looking for Postdoc positions on computer vision and graphics.
+I am now looking for a Postdoc/Researcher position on computer vision and graphics. Please feel free to contact me if you are interested in my background or work.
 </p>
 
 <p>
-<b>Email:</b> yanqingan at whu.edu.cn<br>
+<b>Email:</b> yanqingan at whu.edu.cn | yanqinganssg at gmail.com<br>
 <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
 <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
 <br>
-<b>Mail:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
+<b>Address:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
 </p>
 <p class="simple15">
 <a href="./docs/qingan_yan_cv_2017_1.pdf" class="btn btn-default btn-lg" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> CV</a>&nbsp;
