--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ These days, I am interested in the problem of matching (on both images and geome
 	<li><p><a href="./docs/tvc16_shape.pdf" class="text-black"><b>Shape-Controllable Geometry Completion for Point Cloud Models</b></a><br></p>
 <p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br><i>The Visual Computer (to appear in 2016) </i></p>
 <p>
-			
+<a href="./docs/tvc16_shape.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;			
 </p>
 </li>
 </ul>
@@ -161,7 +161,7 @@ These days, I am interested in the problem of matching (on both images and geome
 	<li><p><a href="./docs/pg14_fast.pdf" class="text-black"><b>Fast Feature-Oriented Visual Connection for Large Image Collections</b></a><br></p>
 <p><b>Qingan Yan</b>, Zhan Xu and Chunxia Xiao<br><i>Computer Graphics Forum (Proceedings of Pacific Graphics 2014)</i></p>
 <p>
-				<a href="./docs/pg16_geometrically.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
+<a href="./docs/pg14_fast.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
 </p>
 </li>
 </ul>
