--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ I am now looking for a Postdoc/Researcher position on computer vision and graphi
 </p>
 </td></tr></tbody></table>
 
-<h2>Research Interest</h2>
+<h2>Research Interests</h2>
 <table class="imgtable"><tbody>
 <tr><td>
 <p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, scene and shape analysis.</p>
@@ -96,8 +96,8 @@ These days, I am interested in the problem of matching (on both images and geome
 </td>
 <td align="left">
 <ul>
-	<li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a><br></p>
-<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br><i>IEEE Transactions on Visualization and Computer Graphics (to appear in 2017)</i></p>
+	<li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a></p>
+	<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br><i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b> (to appear in 2017)</i></p>
 <p>
 
 </p>
@@ -116,9 +116,9 @@ These days, I am interested in the problem of matching (on both images and geome
 </td>
 <td align="left">
 <ul>
-	<li><p><a href="./docs/pg16_geometrically.pdf" class="text-black"><b>Geometrically Based Linear Iterative Clustering for Quantitative Feature Correspondence</b></a><br></p>
+	<li><p><a href="./docs/pg16_geometrically.pdf" class="text-black"><b>Geometrically Based Linear Iterative Clustering for Quantitative Feature Correspondence</b></a></p>
 <p><b>Qingan Yan</b>, Long Yang, Chao Liang, Huajun Liu, Ruimin Hu and Chunxia Xiao<br>
-<i>Computer Graphics Forum (Proceedings of Pacific Graphics 2016)</i></p>
+<i>Computer Graphics Forum <b>(CGF)</b> (Proceedings of Pacific Graphics 2016)</i></p>
 <p>
 				<a href="./docs/pg16_geometrically.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
 				<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> Slides (coming soon) </a>&nbsp;
@@ -138,8 +138,8 @@ These days, I am interested in the problem of matching (on both images and geome
 </td>
 <td align="left">
 <ul>
-	<li><p><a href="./docs/tvc16_shape.pdf" class="text-black"><b>Shape-Controllable Geometry Completion for Point Cloud Models</b></a><br></p>
-<p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br><i>The Visual Computer (to appear in 2016) </i></p>
+	<li><p><a href="./docs/tvc16_shape.pdf" class="text-black"><b>Shape-Controllable Geometry Completion for Point Cloud Models</b></a></p>
+<p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br><i>The Visual Computer <b>(TVC)</b> (to appear in 2016) </i></p>
 <p>
 <a href="./docs/tvc16_shape.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;			
 </p>
@@ -158,8 +158,8 @@ These days, I am interested in the problem of matching (on both images and geome
 </td>
 <td align="left">
 <ul>
-	<li><p><a href="./docs/pg14_fast.pdf" class="text-black"><b>Fast Feature-Oriented Visual Connection for Large Image Collections</b></a><br></p>
-<p><b>Qingan Yan</b>, Zhan Xu and Chunxia Xiao<br><i>Computer Graphics Forum (Proceedings of Pacific Graphics 2014)</i></p>
+	<li><p><a href="./docs/pg14_fast.pdf" class="text-black"><b>Fast Feature-Oriented Visual Connection for Large Image Collections</b></a></p>
+<p><b>Qingan Yan</b>, Zhan Xu and Chunxia Xiao<br><i>Computer Graphics Forum <b>(CGF)</b> (Proceedings of Pacific Graphics 2014)</i></p>
 <p>
 <a href="./docs/pg14_fast.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
 </p>
@@ -178,8 +178,8 @@ These days, I am interested in the problem of matching (on both images and geome
 </td>
 <td align="left">
 <ul>
-<li><p><b>Vision Based Multi-touch System Used in Visualization</b><br></p>
-<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br><i>Proceedings of Pacific Visualization 2011, poster</i></p>
+<li><p><b>Vision Based Multi-touch System Used in Visualization</b></p>
+<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br><i>Proceedings of Pacific Visualization 2011 <b>(PacificVis)</b>, poster</i></p>
 <p>
 <a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> Video</a>&nbsp;
 </p>
@@ -195,8 +195,8 @@ These days, I am interested in the problem of matching (on both images and geome
 <tr>
 <td align="left">
 <ul>
-	<li><p><b>Optical Multi-touch Point Detection Method Based on Visual Attention Model (in Chinese)</b><br>
-	Yadong Wu, <b>Qingan Yan</b> and Zhiqin Liu (<i>CN102855025B, granted, Jun.17.2015</i>)</p>
+	<li><p><b>Optical Multi-touch Point Detection Method Based on Visual Attention Model (in Chinese)</b></p>
+	<p>Yadong Wu, <b>Qingan Yan</b> and Zhiqin Liu (<i>CN102855025B, granted, Jun.17.2015</i>)</p>
 </li>
 
 </ul>
