--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@ I am now looking for a Postdoc/Researcher position on computer vision and graphi
 </p>
 
 <p>
-<b>Email:</b> yanqingan at whu.edu.cn | yanqinganssg at gmail.com<br>
+<b>Email:</b> <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a> | <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
+<b>Address:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
 <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
 <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
 <br>
-<b>Address:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
 </p>
 <p class="simple15">
 <a href="./docs/qingan_yan_cv_2017_1.pdf" class="btn btn-default btn-lg" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> CV</a>&nbsp;
