--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I am now looking for a Postdoc/Researcher position on computer vision and graphi
 
 <p>
 <b>Email:</b> <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a> | <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
-<b>Address:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
+<b>Office:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
 <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
 <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
@@ -91,7 +91,7 @@ These days, I am interested in the problem of matching (on both images and geome
 <h3 style="color:#527bbd">2017</h3>
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="23%">
+<td style="border:#cccccc 1.5px solid" width="20%">
 	<img src="./figures/tvcg17_surface.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
@@ -111,7 +111,7 @@ These days, I am interested in the problem of matching (on both images and geome
 <h3 style="color:#527bbd">2016</h3>
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="23%">
+<td style="border:#cccccc 1.5px solid" width="20%">
 	<img src="./figures/pg16_geometrically.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
@@ -119,11 +119,11 @@ These days, I am interested in the problem of matching (on both images and geome
 	<li><p><a href="./docs/pg16_geometrically.pdf" class="text-black"><b>Geometrically Based Linear Iterative Clustering for Quantitative Feature Correspondence</b></a></p>
 <p><b>Qingan Yan</b>, Long Yang, Chao Liang, Huajun Liu, Ruimin Hu and Chunxia Xiao<br>
 <i>Computer Graphics Forum <b>(CGF)</b> (Proceedings of Pacific Graphics 2016)</i></p>
-<p>
-				<a href="./docs/pg16_geometrically.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
-				<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> Slides (coming soon) </a>&nbsp;
-				<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Code (coming soon) </a>&nbsp;
-  			  </p>
+<p style="padding-top:10px">
+	<a href="./docs/pg16_geometrically.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
+	<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> Slides (coming soon) </a>&nbsp;
+	<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Code (coming soon) </a>&nbsp;
+</p>
 </li>
 </ul>
 </td>
@@ -133,14 +133,14 @@ These days, I am interested in the problem of matching (on both images and geome
 
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="23%">
+<td style="border:#cccccc 1.5px solid" width="20%">
 	<img src="./figures/tvc16_shape.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
 	<li><p><a href="./docs/tvc16_shape.pdf" class="text-black"><b>Shape-Controllable Geometry Completion for Point Cloud Models</b></a></p>
 <p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br><i>The Visual Computer <b>(TVC)</b> (to appear in 2016) </i></p>
-<p>
+<p style="padding-top:10px">
 <a href="./docs/tvc16_shape.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;			
 </p>
 </li>
@@ -153,14 +153,14 @@ These days, I am interested in the problem of matching (on both images and geome
 <h3 style="color:#527bbd">2014</h3>
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="23%">
+<td style="border:#cccccc 1.5px solid" width="20%">
 	<img src="./figures/pg14_fast.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
 	<li><p><a href="./docs/pg14_fast.pdf" class="text-black"><b>Fast Feature-Oriented Visual Connection for Large Image Collections</b></a></p>
 <p><b>Qingan Yan</b>, Zhan Xu and Chunxia Xiao<br><i>Computer Graphics Forum <b>(CGF)</b> (Proceedings of Pacific Graphics 2014)</i></p>
-<p>
+<p style="padding-top:10px">
 <a href="./docs/pg14_fast.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
 </p>
 </li>
@@ -173,14 +173,14 @@ These days, I am interested in the problem of matching (on both images and geome
 <h3 style="color:#527bbd">2011</h3>
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="23%">
+<td style="border:#cccccc 1.5px solid" width="20%">
 	<img src="./figures/pv11_vision.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
 <li><p><b>Vision Based Multi-touch System Used in Visualization</b></p>
-<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br><i>Proceedings of Pacific Visualization 2011 <b>(PacificVis)</b>, poster</i></p>
-<p>
+<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br><i>IEEE Pacific Visualization Symposium <b>(PacificVis)</b> (poster paper)</i></p>
+<p style="padding-top:10px">
 <a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> Video</a>&nbsp;
 </p>
 </li>
@@ -207,7 +207,7 @@ These days, I am interested in the problem of matching (on both images and geome
 
 <div id="footer">
 <div id="footer-text">
-Last updated Dec-21-2016 by Qingan Yan.
+<p style="color:#527bbd">Last updated on Jan-24-2017 by Qingan Yan.</p>
 </div>
 </div>
 </div>
