--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ I am now looking for a Postdoc/Researcher position on computer vision and graphi
 <h2>Research Interests</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, scene and shape analysis.</p>
+<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, multi-view geometry, structure from motion, scene and shape analysis.</p>
 <p>
 These days, I am interested in the problem of matching (on both images and geometries), since I think it is a vital element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
 <p>Meanwhile, I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
@@ -179,7 +179,7 @@ These days, I am interested in the problem of matching (on both images and geome
 <td align="left">
 <ul>
 <li><p><b>Vision Based Multi-touch System Used in Visualization</b></p>
-<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br><i>IEEE Pacific Visualization Symposium <b>(PacificVis)</b> (poster paper)</i></p>
+<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br><i>IEEE Pacific Visualization Symposium 2011 <b>(PacificVis)</b> (poster paper)</i></p>
 <p style="padding-top:10px">
 <a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> Video</a>&nbsp;
 </p>
