--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 <td width="35%"><img src="./figures/qay.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
 <td align="left" style="padding-left:35px">
 <b>About me:</b><br>
-<p>I am a Ph.D. candidate at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Wuhan University, China. Prior to WHU, I received my M.S. and B.E. degree in computer science respectively from SWUST in 2012 and HUN in 2008.</p>
+<p>I am a Ph.D. candidate at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Group</a> of Computer Science Department at <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
 <p>
-<b>Available for hire:</b><br>
+<b>Available for hire (<i>in 2017</i>):</b><br>
 I am now looking for a Postdoc/Researcher position on computer vision and graphics. Please feel free to contact me if you are interested in my background or work.
 </p>
-
+<b>Contact Info:</b><br>
 <p>
-<b>Email:</b> <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a> | <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
-<b>Office:</b> Room B501, Computer School, Wuhan University, China, 430072<br>
-<b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">Github</a> |
+Email: <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a> | <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
+Office: Room B501, Computer School, Wuhan University, China, 430072<br>
+Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
 <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
 <br>
@@ -88,7 +88,6 @@ These days, I am interested in the problem of matching (on both images and geome
 
 <h2>Papers</h2>
 
-<h3 style="color:#527bbd">2017</h3>
 <table class="imgtable"><tbody>
 <tr>
 <td style="border:#cccccc 1.5px solid" width="20%">
@@ -108,7 +107,6 @@ These days, I am interested in the problem of matching (on both images and geome
 </tbody>
 </table>
 
-<h3 style="color:#527bbd">2016</h3>
 <table class="imgtable"><tbody>
 <tr>
 <td style="border:#cccccc 1.5px solid" width="20%">
@@ -150,7 +148,6 @@ These days, I am interested in the problem of matching (on both images and geome
 </tbody>
 </table>
 
-<h3 style="color:#527bbd">2014</h3>
 <table class="imgtable"><tbody>
 <tr>
 <td style="border:#cccccc 1.5px solid" width="20%">
@@ -170,7 +167,6 @@ These days, I am interested in the problem of matching (on both images and geome
 </tbody>
 </table>
 
-<h3 style="color:#527bbd">2011</h3>
 <table class="imgtable"><tbody>
 <tr>
 <td style="border:#cccccc 1.5px solid" width="20%">
