--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <tr><td>
 <p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, multi-view geometry, structure from motion, scene and shape analysis.</p>
 <p>
-These days, I am interested in the problem of matching (on both images and geometries), since I think it is a vital element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
-<p>Meanwhile, I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
+Currently, I am interested in the problem of matching (on both images and geometries), since I think it is a relevant element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
+<p>I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
 </p>
 </td></tr></tbody></table>
 
