--- a/index.html
+++ b/index.html
@@ -91,11 +91,30 @@ Currently, I am interested in the problem of matching (on both images and geomet
 <table class="imgtable"><tbody>
 <tr>
 <td style="border:#cccccc 1.5px solid" width="20%">
+	<img src="./figures/cvpr17_distinguishing.jpg" width="100%<article>">&nbsp;
+</td>
+<td align="left">
+<ul>
+	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a> <img src="./figures/new_animated.gif" \=""></p>
+	<p><b>Qingan Yan</b>, Long Yang and Chunxia Xiao<br><i>IEEE Conference on Computer Vision and Pattern Recognition 2017 <b>(CVPR)</b></i></p>
+<p>
+
+</p>
+</li>
+</ul>
+</td>
+</tr>
+</tbody>
+</table>
+
+<table class="imgtable"><tbody>
+<tr>
+<td style="border:#cccccc 1.5px solid" width="20%">
 	<img src="./figures/tvcg17_surface.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
-	<li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a></p>
+	<li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
 	<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br><i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b> (to appear in 2017)</i></p>
 <p>
 
