--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <div id="layout-content" style="margin-top:80px">
 <div>
-<h2>Qingan Yan <span style="font-family:'Courier New'">['tsi&#331;-&aelig;n j&aelig;n]</span></h2>
+	<h2> <b>Qingan Yan</b> <span style="font-family:courier new">['tsi&#331;-&aelig;n j&aelig;n]</span></h2>
 </div>
 <table class="imgtable"><tbody>
 <tr>
@@ -72,7 +72,7 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <br>
 </p>
 <p class="simple15">
-<a href="./docs/qingan_yan_cv_2017_1.pdf" class="btn btn-default btn-lg" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> CV</a>&nbsp;
+<a href="./docs/qingan_yan_cv_2017_02.pdf" class="btn btn-default btn-lg" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <u>Curriculum Vitae</u></a>&nbsp;
 </p>
 </td></tr></tbody></table>
 
@@ -90,15 +90,16 @@ Currently, I am interested in the problem of matching (on both images and geomet
 
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="20%">
+<td width="20%">
 	<img src="./figures/cvpr17_distinguishing.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
 	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a> <img src="./figures/new_animated.gif" \=""></p>
-	<p><b>Qingan Yan</b>, Long Yang and Chunxia Xiao<br><i>IEEE Conference on Computer Vision and Pattern Recognition 2017 <b>(CVPR)</b></i></p>
-<p>
-
+	<p><b>Qingan Yan</b>, Long Yang and Chunxia Xiao<br>
+	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2017</i></p>
+<p style="padding-top:10px">
+<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
 </p>
 </li>
 </ul>
@@ -109,15 +110,16 @@ Currently, I am interested in the problem of matching (on both images and geomet
 
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="20%">
+<td width="20%">
 	<img src="./figures/tvcg17_surface.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
 	<li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
-	<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br><i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b> (to appear in 2017)</i></p>
-<p>
-
+	<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
+	<i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b> (to appear in 2017)</i></p>
+<p style="padding-top:10px">
+	<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
 </p>
 </li>
 </ul>
@@ -128,7 +130,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="20%">
+<td width="20%">
 	<img src="./figures/pg16_geometrically.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
@@ -137,9 +139,8 @@ Currently, I am interested in the problem of matching (on both images and geomet
 <p><b>Qingan Yan</b>, Long Yang, Chao Liang, Huajun Liu, Ruimin Hu and Chunxia Xiao<br>
 <i>Computer Graphics Forum <b>(CGF)</b> (Proceedings of Pacific Graphics 2016)</i></p>
 <p style="padding-top:10px">
-	<a href="./docs/pg16_geometrically.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
-	<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> Slides (coming soon) </a>&nbsp;
-	<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Code (coming soon) </a>&nbsp;
+	<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+	<!--<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Code (coming soon) </a>&nbsp;-->
 </p>
 </li>
 </ul>
@@ -150,15 +151,16 @@ Currently, I am interested in the problem of matching (on both images and geomet
 
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="20%">
+<td width="20%">
 	<img src="./figures/tvc16_shape.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
 	<li><p><a href="./docs/tvc16_shape.pdf" class="text-black"><b>Shape-Controllable Geometry Completion for Point Cloud Models</b></a></p>
-<p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br><i>The Visual Computer <b>(TVC)</b> (to appear in 2016) </i></p>
+	<p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br>
+	<i>The Visual Computer <b>(TVC)</b> (to appear in 2016) </i></p>
 <p style="padding-top:10px">
-<a href="./docs/tvc16_shape.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;			
+<a href="./docs/tvc16_shape.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;			
 </p>
 </li>
 </ul>
@@ -169,15 +171,16 @@ Currently, I am interested in the problem of matching (on both images and geomet
 
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="20%">
+<td width="20%">
 	<img src="./figures/pg14_fast.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
 	<li><p><a href="./docs/pg14_fast.pdf" class="text-black"><b>Fast Feature-Oriented Visual Connection for Large Image Collections</b></a></p>
-<p><b>Qingan Yan</b>, Zhan Xu and Chunxia Xiao<br><i>Computer Graphics Forum <b>(CGF)</b> (Proceedings of Pacific Graphics 2014)</i></p>
+	<p><b>Qingan Yan</b>, Zhan Xu and Chunxia Xiao<br>
+	<i>Computer Graphics Forum <b>(CGF)</b> (Proceedings of Pacific Graphics 2014)</i></p>
 <p style="padding-top:10px">
-<a href="./docs/pg14_fast.pdf" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Paper</a>&nbsp;
+<a href="./docs/pg14_fast.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
 </p>
 </li>
 </ul>
@@ -188,15 +191,17 @@ Currently, I am interested in the problem of matching (on both images and geomet
 
 <table class="imgtable"><tbody>
 <tr>
-<td style="border:#cccccc 1.5px solid" width="20%">
+<td width="20%">
+	<!--<img src="./figures/pv11_vision.jpg" style="border:#cccccc 1.5px solid" width="100%<article>">&nbsp;-->
 	<img src="./figures/pv11_vision.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
 <li><p><b>Vision Based Multi-touch System Used in Visualization</b></p>
-<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br><i>IEEE Pacific Visualization Symposium 2011 <b>(PacificVis)</b> (poster paper)</i></p>
+	<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br>
+	<i>IEEE Pacific Visualization Symposium <b>(PacificVis)</b> 2011 (poster paper)</i></p>
 <p style="padding-top:10px">
-<a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> Video</a>&nbsp;
+<a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> <b><u>Video</u></b></a>&nbsp;
 </p>
 </li>
 </ul>
@@ -222,7 +227,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on Jan-24-2017 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on Feb-27-2017 by Qingan Yan.</p>
 </div>
 </div>
 </div>
