--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
 <br>
 </p>
-<p class="simple15">
+<p class="simple15"  style="padding-top:8px">
 <a href="./docs/qingan_yan_cv_2017_02.pdf" class="btn btn-default btn-lg" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <u>Curriculum Vitae</u></a>&nbsp;
 </p>
 </td></tr></tbody></table>
@@ -97,7 +97,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 <ul>
 	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a> <img src="./figures/new_animated.gif" \=""></p>
 	<p><b>Qingan Yan</b>, Long Yang and Chunxia Xiao<br>
-	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2017</i></p>
+	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2017 (spotlight) </i></p>
 <p style="padding-top:10px">
 <a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
 </p>
@@ -199,7 +199,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 <ul>
 <li><p><b>Vision Based Multi-touch System Used in Visualization</b></p>
 	<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br>
-	<i>IEEE Pacific Visualization Symposium <b>(PacificVis)</b> 2011 (poster paper)</i></p>
+	<i>IEEE Pacific Visualization Symposium <b>(PacificVis)</b> 2011 (poster)</i></p>
 <p style="padding-top:10px">
 <a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> <b><u>Video</u></b></a>&nbsp;
 </p>
