--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 <ul>
 	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a> <img src="./figures/new_animated.gif" \=""></p>
 	<p><b>Qingan Yan</b>, Long Yang and Chunxia Xiao<br>
-	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2017 (spotlight) </i></p>
+	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2017 (Spotlight) </i></p>
 <p style="padding-top:10px">
 <a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
 </p>
@@ -117,7 +117,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 <ul>
 	<li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
 	<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
-	<i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b> (to appear in 2017)</i></p>
+	<i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b> (To appear in 2017)</i></p>
 <p style="padding-top:10px">
 	<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
 </p>
@@ -158,7 +158,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 <ul>
 	<li><p><a href="./docs/tvc16_shape.pdf" class="text-black"><b>Shape-Controllable Geometry Completion for Point Cloud Models</b></a></p>
 	<p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br>
-	<i>The Visual Computer <b>(TVC)</b> (to appear in 2016) </i></p>
+	<i>The Visual Computer <b>(TVC)</b> (To appear in 2016) </i></p>
 <p style="padding-top:10px">
 <a href="./docs/tvc16_shape.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;			
 </p>
@@ -199,7 +199,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 <ul>
 <li><p><b>Vision Based Multi-touch System Used in Visualization</b></p>
 	<p>Yadong Wu, <b>Qingan Yan</b>, Jie Fu, Hongli Deng and Lili Song<br>
-	<i>IEEE Pacific Visualization Symposium <b>(PacificVis)</b> 2011 (poster)</i></p>
+	<i>IEEE Pacific Visualization Symposium <b>(PacificVis)</b> 2011 (Poster)</i></p>
 <p style="padding-top:10px">
 <a href="http://www.tudou.com/programs/view/xn3Dt_w8YZk/" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-film" aria-hidden="true"></span> <b><u>Video</u></b></a>&nbsp;
 </p>
