--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 	<p><b>Qingan Yan</b>, Long Yang and Chunxia Xiao<br>
 	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2017 (Spotlight) </i></p>
 <p style="padding-top:10px">
-<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
+<a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
 </p>
 </li>
 </ul>
@@ -119,7 +119,7 @@ Currently, I am interested in the problem of matching (on both images and geomet
 	<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
 	<i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b> (To appear in 2017)</i></p>
 <p style="padding-top:10px">
-	<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
+	<a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
 </p>
 </li>
 </ul>
