--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <td width="30%"><img src="./figures/qay.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
 <td align="left" style="padding-left:40px">
 <b>About me:</b><br>
-<p>I am a Ph.D. candidate at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Group</a> of Computer Science Department at <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
+<p>I am a Ph.D. candidate at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Computer Science Department at <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
 <p>
 <b>Available for hire (<i>in 2017</i>):</b><br>
 I am now looking for a Postdoc/Researcher position on computer vision and graphics. Please feel free to contact me if you are interested in my background or work.
@@ -79,9 +79,9 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <h2>Research Interests</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, multi-view geometry, structure from motion, scene and shape analysis.</p>
+<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, multi-view geometry, matching and deep learning in scene and shape analysis.</p>
 <p>
-Currently, I am interested in the problem of matching (on both images and geometries), since I think it is a relevant element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
+Currently, I am interested in the problem of correspondence (on both rigid and non-rigid images), since I think it is a relevant element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
 <p>I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
 </p>
 </td></tr></tbody></table>
