--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@ Currently, I am interested in the problem of correspondence (on both rigid and n
 	<p><b>Qingan Yan</b>, Long Yang and Chunxia Xiao<br>
 	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2017 (Spotlight) </i></p>
 <p style="padding-top:10px">
-<a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
+<a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b> (will be released in May)</a>&nbsp;
 </p>
 </li>
 </ul>
