--- a/index.html
+++ b/index.html
@@ -120,7 +120,27 @@ Currently, I am interested in the problem of correspondence (on both rigid and n
 	<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
 	<i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>. (To appear in 2017)</i></p>
 <p style="padding-top:10px">
-	<a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b> (coming soon)</a>&nbsp;
+	<a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+</p>
+</li>
+</ul>
+</td>
+</tr>
+</tbody>
+</table>
+
+<table class="imgtable"><tbody>
+<tr>
+<td width="20%">
+	<img src="./figures/tvc16_shape.jpg" width="100%<article>">&nbsp;
+</td>
+<td align="left">
+<ul>
+	<li><p><a href="./docs/tvc16_shape.pdf" class="text-black"><b>Shape-Controllable Geometry Completion for Point Cloud Models</b></a></p>
+	<p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br>
+	<i>The Visual Computer <b>(TVC)</b>, 2017, 33(3): 385-398.</i></p>
+<p style="padding-top:10px">
+<a href="./docs/tvc16_shape.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;			
 </p>
 </li>
 </ul>
@@ -142,26 +162,6 @@ Currently, I am interested in the problem of correspondence (on both rigid and n
 <p style="padding-top:10px">
 	<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
 	<!--<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Code (coming soon) </a>&nbsp;-->
-</p>
-</li>
-</ul>
-</td>
-</tr>
-</tbody>
-</table>
-
-<table class="imgtable"><tbody>
-<tr>
-<td width="20%">
-	<img src="./figures/tvc16_shape.jpg" width="100%<article>">&nbsp;
-</td>
-<td align="left">
-<ul>
-	<li><p><a href="./docs/tvc16_shape.pdf" class="text-black"><b>Shape-Controllable Geometry Completion for Point Cloud Models</b></a></p>
-	<p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br>
-	<i>The Visual Computer <b>(TVC)</b>, 2017, 33(3): 385-398.</i></p>
-<p style="padding-top:10px">
-<a href="./docs/tvc16_shape.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;			
 </p>
 </li>
 </ul>
