--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <br>
 </p>
 <p class="simple15"  style="padding-top:8px">
-<a href="./docs/qingan_yan_cv_2017_03.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
+<a href="./docs/qingan_yan_cv_2017_05.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
 </p>
 </td></tr></tbody></table>
 
@@ -87,6 +87,26 @@ Currently, I am interested in the problem of correspondence (on both rigid and n
 </td></tr></tbody></table>
 
 <h2>Papers</h2>
+
+<table class="imgtable"><tbody>
+<tr>
+<td width="20%">
+	<img src="./figures/tip17_illumination.jpg" width="100%<article>">&nbsp;
+</td>
+<td align="left">
+<ul>
+	<li><p><b>Illumination Decomposition for Photograph with Multiple Light Sources</b> <img src="./figures/new_animated.gif" \=""></p>
+	<p>Ling Zhang, <b>Qingan Yan</b>, Zheng Liu, Hua Zou and Chunxia Xiao<br>
+	<i>IEEE Transactions on Image Processing <b>(TIP)</b>. (To appear in 2017) </i></p>
+<p style="padding-top:10px">
+
+</p>
+</li>
+</ul>
+</td>
+</tr>
+</tbody>
+</table>
 
 <table class="imgtable"><tbody>
 <tr>
@@ -132,7 +152,7 @@ Currently, I am interested in the problem of correspondence (on both rigid and n
 <table class="imgtable"><tbody>
 <tr>
 <td width="20%">
-	<img src="./figures/tvc16_shape.jpg" width="100%<article>">&nbsp;
+	<img src="./figures/tvc17_shape.jpg" width="100%<article>">&nbsp;
 </td>
 <td align="left">
 <ul>
@@ -228,7 +248,7 @@ Currently, I am interested in the problem of correspondence (on both rigid and n
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on Mar-06-2017 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on May-06-2017 by Qingan Yan.</p>
 </div>
 </div>
 </div>
