--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <tr><td>
 <p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, multi-view geometry, matching and deep learning in scene and shape analysis.</p>
 <p>
-Currently, I am interested in the problem of correspondence (on both rigid and non-rigid images), since I think it is a relevant element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, texture-less shapes and the vegetation.</p> 
+Currently, I am interested in the problem of matching, as I think it is a relevant element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, feature-less shapes and the vegetation.</p> 
 <p>I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
 </p>
 </td></tr></tbody></table>
@@ -120,7 +120,7 @@ Currently, I am interested in the problem of correspondence (on both rigid and n
 	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017. (Spotlight) </i></p>
 <p style="padding-top:10px">
 <a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
-<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b> (will be released in June)</a>&nbsp;
+<!--<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b> (will be released in June)</a>&nbsp;-->
 </p>
 </li>
 </ul>
