--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <td width="30%"><img src="./figures/qay.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
 <td align="left" style="padding-left:40px">
 <b>About me:</b><br>
-<p>I am a Ph.D. candidate at <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> of Computer Science Department at <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
+<p>I am a Ph.D. candidate in <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> at Computer Science Department of <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
 <p>
 <b>Available for hire (<i>in 2017</i>):</b><br>
 I am now looking for a Postdoc/Researcher position on computer vision and graphics. Please feel free to contact me if you are interested in my background or work.
