--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <p>I am a Ph.D. candidate in <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> at Computer Science Department of <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
 <p>
 <b>Available for hire (<i>in 2017</i>):</b><br>
-I am now looking for a Postdoc/Researcher position on computer vision and graphics. Please feel free to contact me if you are interested in my background or work.
+I am now looking for a Postdoc/Researcher position in computer vision and graphics. Please feel free to contact me if you are interested in my background or work.
 </p>
 <b>Contact Info:</b><br>
 <p>
