--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <h2>Research Interests</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, matching, image-based rendering and scene and shape analysis.</p>
+<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, matching, deep learning and scene understanding.</p>
 <p>
 Currently, I am interested in the problem of matching, as I think it is a relevant element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, feature-less shapes and the vegetation.</p> 
 <p>I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
